# chromium-session

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/chromium_session/: browsers.py  cli.py  parser.py
