[project]
name = "chromium-session"
version = "0.1.0"
description = "Parse Chromium-based browser session files (Chrome, Vivaldi, Brave, Edge) with workspace support"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.1",
    "typer>=0.21.1",
]

[project.scripts]
chromium-session = "chromium_session.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chromium_session"]
